--- a/stack.yaml
+++ b/stack.yaml
@@ -12,6 +12,24 @@ Resources:
         -
           Key: Name
           Value: Web server
-        - Key: Project
+        - 
+          Key: Project
           Value: CloudFormation Step By Step
+
+  WebServerSecurityGroup:
+    # use VpcId to specify for which VPC to create the security group
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security group for web servers
+      # ingress specifies an inbound rule for a security group
+      SecurityGroupIngress:
+        - 
+          IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+      Tags:
+        -
+          Key: Name
+          Value: Web server
       
