--- a/activity-stack.yaml
+++ b/activity-stack.yaml
@@ -9,4 +9,11 @@ Resources:
       Tags: 
         -
           Key: Name
-          Value: VPC
+          Value: ActivityVPC
+
+  PublicSubnet:
+    Type: AWS::EC2::Subnet
+    Properties:
+      CidrBlock: 10.0.0.0/24
+      MapPublicIpOnLaunch: true
+      VpcId: !Ref VPC
