--- a/activity-stack.yaml
+++ b/activity-stack.yaml
@@ -60,3 +60,17 @@ Resources:
       InstanceType: t2.micro
       SubnetId: !Ref PublicSubnet
       ImageId: ami-0713f98de93617bb4
+      SecurityGroupIds:
+        - !Ref SecurityGroup
+
+  SecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security Group
+      VpcId: !Ref VPC
+      SecurityGroupIngress: 
+        -
+          IpProtocol: icmp
+          FromPort: -1
+          ToPort: -1
+          CidrIp: 0.0.0.0/0
